--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Sole purpose of this repository is to hold videos too large to be hosted by Micro.blog.
+Sole purpose of this repository is to hold files that cannot be uploaded to Micro.blog (i.e. large videos, PDFs).
